[files] Fixed invite icon not adjusting on narrow viewport

--- a/frontend/files/styles/main.scss
+++ b/frontend/files/styles/main.scss
@@ -852,7 +852,7 @@ a {
 		margin-left: auto;
 	}
 
-	#refreshButton {
+	#refreshButton, #inviteButton {
 		margin-right: 10px;
 		margin-top: -10px;
 	}
